# admin-jobs

./: .gitignore  Cargo.toml  README.md  dockerfile
.github/workflows/: ci.yaml
assets/static/: 404.html  styles.css
assets/views/home/: index.html
assets/views/jobs/: _job.html  _list.html
assets/views/layouts/: application.html
config/: development.yaml  production.yaml  test.yaml
data/: sample.sqlite
src/: app.rs  lib.rs
src/controllers/: home.rs  job.rs  mod.rs
src/initializers/: view_engine.rs
src/shared/: config.rs  db.rs
tests/: mod.rs  utils.rs
tests/db/: mod.rs  postgres.rs  sqlite.rs
tests/db/snapshots/: r#mod__db__postgres__can_get_job.snap  r#mod__db__postgres__can_get_status_stats.snap  r#mod__db__postgres__search[None]-status[None].snap  r#mod__db__postgres__search[None]-status[Some("completed")].snap  r#mod__db__postgres__search[Some("UserAccountActivation")]-status[None].snap  r#mod__db__postgres__search[Some("UserAccountActivation")]-status[Some("completed")].snap  r#mod__db__sqlite__can_get_job.snap  r#mod__db__sqlite__can_get_status_stats.snap  r#mod__db__sqlite__search[None]-status[None].snap  r#mod__db__sqlite__search[None]-status[Some("completed")].snap  r#mod__db__sqlite__search[Some("UserAccountActivation")]-status[None].snap  r#mod__db__sqlite__search[Some("UserAccountActivation")]-status[Some("completed")].snap
tests/requests/: home.rs  job.rs  mod.rs
