[workspace]

[package]
name = "admin-panel"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "admin_panel-cli"
rust-version = "1.82.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
test-postgres = []

[workspace.dependencies]
loco-rs = { version = "0.13.2", default-features = false }

[dependencies]
loco-rs = { workspace = true, features = ["cli"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = { version = "0.9.34" }
serde_json = "1"
tokio = { version = "1.33.0", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = "0.1.74"
axum = "0.7.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
# view engine i18n
unic-langid = "0.9.4"
# /view engine

chrono = { version = "0.4.38", features = ["serde"] }
sqlx = { version = "0.8.2", default-features = false, features = [
  "macros",
  "json",
  "postgres",
  "sqlite",
  "runtime-tokio-rustls",
  "chrono",

] }

[[bin]]
name = "admin_panel-cli"
path = "src/bin/main.rs"
required-features = []

[[bin]]
name = "tool"
path = "src/bin/tool.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = "3.1.1"
rstest = "0.23.0"
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
tree-fs = "0.2.1"
